@@ -402,6 +402,7 @@ var Sao = {};
                 deferreds.push(Sao.common.MODELACCESS.load_models());
                 deferreds.push(Sao.common.ICONFACTORY.load_icons());
                 deferreds.push(Sao.common.MODELHISTORY.load_history());
+                deferreds.push(Sao.common.MODELNOTIFICATION.load_names());
                 deferreds.push(Sao.common.VIEW_SEARCH.load_searches());
                 return jQuery.when.apply(jQuery, deferreds).then(function() {
                     for (const action_id of (preferences.actions || [])) {
